--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ pillow==12.0.0
 requests==2.32.5
 fastapi==0.121.2
 uvicorn[standard]==0.38.0
+playsound==1.2.2
 
 # Native / build-time helpers
 dlib==20.0.0
